# hrdr

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  temp.md
.github/workflows/: ci.yml  cron.yml
apps/hrdr/: Cargo.toml  art.txt
apps/hrdr-gui/: Cargo.toml
apps/hrdr-gui/src/: main.rs  md.rs
apps/hrdr/src/: backend.rs  main.rs
apps/hrdr/tests/: smoke.rs  tui_pty.rs
crates/hrdr-agent/: Cargo.toml
crates/hrdr-agent/src/: agents_dir.rs  auth.rs  chatgpt_models.rs  lib.rs  models.rs  oauth.rs  prompt.rs  session.rs  subagent_live.rs  subagent_transcript.rs  usage.rs
crates/hrdr-app/: Cargo.toml
crates/hrdr-app/src/: commands.rs  completion.rs  config.rs  format.rs  highlight.rs  history.rs  lib.rs  login.rs  palette.rs  pane.rs  session.rs  sessions.rs  skills.rs  status.rs  subagents.rs  transcript.rs  util.rs
crates/hrdr-app/tests/: watch_debounce.rs
crates/hrdr-editor/: Cargo.toml
crates/hrdr-editor/src/: host.rs  lib.rs  plain.rs
crates/hrdr-llm/: Cargo.toml
crates/hrdr-llm/src/: anthropic.rs  catalog.rs  client.rs  codex.rs  lib.rs  types.rs
crates/hrdr-llm/tests/: catalog_pinned.rs
crates/hrdr-tools/: Cargo.toml
crates/hrdr-tools/src/: checkpoint.rs  guardrails.rs  hooks.rs  lib.rs  lsp.rs  mcp.rs  patch.rs  tools.rs  web.rs
crates/hrdr-tui/: Cargo.toml
crates/hrdr-tui/src/: app.rs  lib.rs  theme.rs  theme.toml  tui.rs  ui.rs
docs/superpowers/plans/: 2026-07-12-cross-provider-delegation.md
pkg/alpine/: APKBUILD.in
pkg/aur/: PKGBUILD-bin.in
pkg/homebrew/: hrdr.rb.in
pkg/scoop/: hrdr.json.in
(+38 files in other folders)
