[package]
name = "hrdr-llm"
description = "OpenAI-compatible chat-completions client for hrdr (streaming + native tool calls)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures-util.workspace = true
async-stream.workspace = true
